<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="facebook_app_id" translatable="false">279230356270437</string>
    <string name="google_web_client_id">687673132756-jrjqrfv5mv1aahkt4ovk5q2m5c7g532v.apps.googleusercontent.com</string>
    <string name="admin_options" translatable="false">Admin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_edit_profile">SettingsActivity</string>
    <string name="mobile_verification">MOBILE VERIFICATION</string>
    <string name="need_to_text_you_the_OTP">We need to text you the OTP to authenticate your account</string>
    <string name="enter_your_phone_number"><font size="12">To continue, enter your mobile number</font></string>
    <string name="send_otp">SEND OTP</string>
    <string name="OTP_will_be_sent_to_your_number">An OTP will be sent to your number for verification</string>
    <string name="enter_valid_number">Please enter a valid number</string>
    <string name="enter_valid_country_code">Please enter a valid country code</string>
    <string name="enter_valid_otp">Please enter a valid OTP</string>
    <string name="verification_code">VERIFICATION CODE</string>
    <string name="verification_code_send_to">Please type the verification code sent to</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="skip">Skip</string>
    <string name="skip_in">Skip in %1$s</string>
    <string name="start_zero">00:00</string>
    <string name="contactus">Contact Us</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="aboutus">About Us</string>
    <string name="rateus">Rate Us</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="howtousedoubtnut">How To Use Doubtnut</string>
    <string name="howtouseforum">How to Use Forum</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="pip_mode_settings">PIP Mode Settings</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_microconcepts">MicroconceptsActivity</string>
    <string name="title_activity_tag_questions">TagQuestionsActivity</string>
    <string name="select_class_heading">Select your class</string>
    <string name="select_chapter_heading">Select chapter of your question</string>
    <string name="select_sub_chapter_heading">Select subtopic of your question</string>
    <string name="videodislikefeedback">You faced a problem in :</string>
    <string name="ask_community_confirmation_text1">Yayy!!</string>
    <string name="ask_community_confirmation_text2">Your Question has been sent to the forum.</string>
    <string name="ask_community_confirmation_text3">Get votes from your friends to get your question solved</string>
    <string name="ask_community_confirmation_text5">Share with Friends</string>
    <string name="ask_community_confirmation_text6">See Details</string>
    <string name="community_share_message">Aao milke is question ki Doubtnut forum pe solve karein: </string>
    <string name="video_share_message">Waah! क्या बढ़िया तरीके से इस question ko Doubtnut App ने समझाया hai :D Khud dekho…maan jaaoge :D  </string>
    <string name="asked_by">Asked by:\t</string>
    <string name="upvote">Upvote:</string>
    <string name="upvoted">Upvoted:</string>
    <string name="upvote_confirmation">Thankyou for your vote.</string>
    <string name="already_upvoted">You have already voted for this question.</string>
    <string name="api_error">Something went wrong please try later !!</string>
    <string name="invalidate_otp">Invalid otp, Please try again !!</string>
    <string name="title_activity_forum_question">ForumQuestionActivity</string>
    <string name="question_asked">QUESTION ASKED</string>
    <string name="answered">Answered</string>
    <string name="queued">QUEUED</string>
    <string name="poor_connection">Looks like the server is taking too long to respond, this can be caused by poor connectivity. Please try again in a while</string>
    <string name="badRequest_tittle">Bad Access Token</string>
    <string name="badRequest_body">We received a bad access token. We recommend you to get a new access token.</string>
    <string name="login_tittle">Please Login to View Your Profile Details</string>
    <string name="login_button">Login</string>
    <string name="find_solution">FIND SOLUTION</string>
    <string name="string_tagQuestionActivity_titleQuestions">Questions</string>
    <string name="choose_options">Please select an option</string>
    <string name="whatsapp_video_share">Hello! I loved the solution of this question on Doubtnut App. Watch this awesome video solution here:</string>
    <string name="solveItFroMe">Solve it for me!</string>
    <string name="solveItFroMeToast">Our Experts Will solve this now!</string>
    <string name="typeyourquestion">Type your question</string>
    <string name="string_profileFragment_unknown">Unknown</string>
    <string name="string_profileFragment_emailAddress">username@email.com</string>
    <string name="nomatchtitle">No Match Found</string>
    <string name="nomatchheading">How to get better match</string>
    <string name="nomatchtv1">No Handwritten Question</string>
    <string name="nomatchtv2">Crop to One Question</string>
    <string name="nomatchtv3">Crop to Equation if equation is prominent</string>
    <string name="nomatchaskagain">Ask Again</string>
    <string name="string_editProfile_schoolNameHint">SCHOOL NAME</string>
    <string name="string_networkUtils_noInternetConnection">Please connect to internet</string>
    <string name="string_noInternetConnection">Check your Internet Connection !</string>
    <string name="dialog_notificationEducation_dontMissNotification">Don\'t Miss Any \nLatest Notifications!</string>
    <string name="string_notificationEducation_notificationTurnedOn">Make sure your notifications are turned on</string>
    <string name="string_notificationEducation_enableNotification">To enable notification for doubtnut got to settings and turn the notification on for doubtnut</string>
    <string name="string_notificationEducation_cancel">Cancel</string>
    <string name="string_notificationEducation_allow">allow</string>
    <string name="post_successfully_in_community">Your question is posted in community.</string>
    <string name="permtext">Doubtnut needs <b>Camera &amp; Audio </b>  permission from your device to be able to Take picture of your Doubt\n</string>
    <string name="permtextExternalStorage">Doubtnut needs External Storage permission from your device to be able to upload video of your solution</string>
    <string name="string_exoplayerHelper_errorPlayingVideo">Error while playing video</string>
    <string name="string_install_whatsApp">WhatsApp is not installed in your device</string>
    <string name="string_install_s">%s is not installed in your device</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="loginLimitExceeded">Login limit exceeded, Please try after sometime…</string>
    <string name="viewall">View All</string>
    <string name="dismiss">Dismiss</string>
    <string name="ask_question_again">Ask Question Again</string>
    <string name="addedtoplaylist">Added to playlist</string>
    <string name="alreadyaddedtoplaylist">Already Added to your playlist !!</string>
    <string name="string_editProfile_coachingNameHint">Coaching Name</string>
    <string name="string_editProfile_pinCodeHint">Pincode</string>
    <string name="string_itemtimeline_like">Like</string>
    <string name="favourite">Favourite</string>
    <string name="comment">Comment</string>
    <string name="string_timeline_daysAgo">%1$s days ago</string>
    <string name="string_timeline_yearsAgo">%1$s years ago</string>
    <string name="string_itemtimeline_pollingSubmit">Submit</string>
    <string name="string_itemtimeline_finalResult">%1$s Votes</string>
    <string name="string_timelineFeed_chooseAnOption">Please choose an option!</string>
    <string name="string_timelineFeed_sharingInProgress">Please wait while the previous item is being shared.</string>
    <string name="string_sharing_progress">Please wait while the item is being shared.</string>
    <string name="feed">Feed</string>
    <string name="sharedfeed">Shared Feed</string>
    <string name="starttypingyourquestion">Start typing your question</string>
    <string name="pleaseentertext">Please enter text</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="friends_who_joined">Friends who Joined</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="invite_friend_caption">Learn together with friends</string>
    <string name="invite_share_text">I find solutions of all my Physics Chemistry Maths and Biology Doubts on Doubtnut App - You should also install it - Lets learn together on Doubtnut -</string>
    <string name="addAFrnd">Add A Friend</string>
    <string name="grant_permission">Grant</string>
    <string name="exit_permission">Go Back</string>
    <string name="choose_correct_img">Select the correct image</string>
    <string name="select_class">Select your preferred class</string>
    <string name="select_image_from">Select Image From</string>
    <string name="choose_from_camera">Choose from Camera</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="bad_access_token_body">We received a Bad Access Token. We recommend you to logout and signin again.</string>
    <string name="bad_access_token_title">Bad Access Token</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_home_bottom_nav_pdfs">Live Class</string>
    <string name="string_home_bottom_nav_forum">Friends</string>
    <string name="string_home_bottom_nav_profile">Profile</string>
    <string name="caption_bottomnavigation_doubt">Doubt?</string>
    <string name="string_home_bottom_nav_home">Home</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="quick_search">Quick Search</string>
    <string name="display_the_search_box_in_the_notification_bar">Display the search box in the notification bar</string>
    <string name="display_video_suggestion_in_the_notification_bar">Display video suggestion in the notification bar</string>
    <string name="video_suggestion">Video Suggestion</string>
    <string name="ban_state_header_text">Aapko Doubtnut Community se ban kardiya gaya hai</string>
    <string name="unban_request_message">Agar aapne Community ke Rules nahi tode hai to Ban hatwane ke liye request kariye</string>
    <string name="unban_action_text">Request to remove Ban</string>
    <string name="doubt_pe_charcha_feedback_title">Did you get the solution?</string>
    <string name="study_group">Study Group</string>
    <string name="group_info">Group Info</string>
    <string name="copy_invite_link">Copy Invite Link</string>
    <string name="invite_member">Invite Member</string>
    <string name="faqs">FAQs</string>
    <string name="mark_resolved">Mark Resovled</string>
    <string name="leave_study_group">Leave Group</string>
    <string name="sg_mute_notification">Mute Notification</string>
    <string name="sg_copy_profile_link">Copy Profile Link</string>
    <string name="sg_mute_notification_title">It will mute all study group notification including Invites)</string>
    <string name="report_group">Report Group</string>
    <string name="block_user">Block User</string>
    <string name="doubt_pe_charcha">Doubt Pe charcha</string>
    <string name="doubt_pe_charcha_notification_setting_title">Give notification when someone need help in doubt solving</string>
</resources>