<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:title="@string/string_home_bottom_nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:title="@string/string_home_bottom_nav_pdfs"
        app:showAsAction="ifRoom" />

    <item
        android:enabled="true"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/forumFragment"
        android:enabled="true"
        android:title="@string/string_home_bottom_nav_forum"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/userProfileFragment"
        android:enabled="true"
        android:title="@string/string_home_bottom_nav_profile"
        app:showAsAction="ifRoom" />

</menu>