<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_image_from"
        style="@style/TextAppearance.Headline6"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_camera"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
            android:clickable="true"
            />


        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_gallery"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_image_black_24dp"
            android:clickable="true"
            />

    </LinearLayout>
</LinearLayout>