<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffeeee"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvBanStateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/ban_state_header_text"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUnbaneMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/unban_request_message"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/font_14sp" />

    <TextView
        android:id="@+id/tvRequestUnban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/color_ffe1e1"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/unban_action_text"
        android:textColor="@color/color_eb532c"
        android:textSize="@dimen/font_14sp"
        android:textStyle="bold" />
</LinearLayout>