<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="?attr/homeAsUpIndicator"
                android:tint="@color/greyBlackDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/notification_settings"
                android:textColor="@color/greyBlackDark"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonBack"
                app:layout_constraintTop_toTopOf="@+id/buttonBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchQuickSearch"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#343434"
        android:letterSpacing="-0.02"
        android:text="@string/quick_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/display_the_search_box_in_the_notification_bar"
        android:textColor="@color/warm_grey"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchQuickSearch"
        tools:ignore="SmallSp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchVideoStickyNotification"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/video_suggestion"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#343434"
        android:letterSpacing="-0.02"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchQuickSearch" />

    <TextView
        android:id="@+id/textViewVideoStickyNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/display_video_suggestion_in_the_notification_bar"
        android:textStyle="normal"
        android:textColor="@color/warm_grey"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchVideoStickyNotification"
        tools:ignore="SmallSp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDoubtP2pNotification"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/doubt_pe_charcha"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#343434"
        android:letterSpacing="-0.02"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVideoStickyNotification" />

    <TextView
        android:id="@+id/textViewDoubtP2pNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/doubt_pe_charcha_notification_setting_title"
        android:visibility="gone"
        android:textStyle="normal"
        android:textColor="@color/warm_grey"
        android:textSize="10sp"
        android:letterSpacing="-0.02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDoubtP2pNotification"
        tools:ignore="SmallSp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchStudyGroupNotification"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/study_group"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#343434"
        android:letterSpacing="-0.02"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoubtP2pNotification" />

    <TextView
        android:id="@+id/textViewStudyGroupNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/sg_mute_notification_title"
        android:visibility="visible"
        android:textStyle="normal"
        android:textColor="@color/warm_grey"
        android:textSize="10sp"
        android:letterSpacing="-0.02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchStudyGroupNotification"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>